# subnet-calculator

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
app/: main.py
app/adapters/controllers/: say_hi.py
app/infra/web/: router.py
app/playground/: calculator.py
app/views/: playground.py
